--- a/src/components/desktop/Contact.module.css
+++ b/src/components/desktop/Contact.module.css
@@ -1,17 +1,33 @@
-.email-button {
+.night-email-button {
   user-select: default;
   cursor: pointer;
   color: #dc143c;
 }
 
-.email-button:hover {
+.night-email-button:hover {
   text-decoration: underline;
   color: #ffffff;
 }
 
-.email-button:active {
+.night-email-button:active {
   text-decoration: underline;
   color: gainsboro;
+}
+
+.day-email-button {
+  user-select: default;
+  cursor: pointer;
+  color: #dc143c;
+}
+
+.day-email-button:hover {
+  text-decoration: underline;
+  color: gainsboro;
+}
+
+.day-email-button:active {
+  text-decoration: underline;
+  color: silver;
 }
 
 .contact-text {
@@ -30,6 +46,7 @@
 
 .night-contact {
   background: #062f4f;
+  color: #f8f8ff;
   height: 100vh;
   width: 100%;
   text-align: center;
@@ -37,7 +54,63 @@
 
 .day-contact {
   background: #fbfcff;
+  color: #080808;
   height: 100vh;
   width: 100%;
   text-align: center;
 }
+
+.night-contact a:link {
+  text-decoration: none;
+  color: #ff004f;
+  outline: none;
+}
+
+.night-contact a:visited {
+  text-decoration: none;
+  color: #ff004f;
+}
+
+.night-contact a:hover {
+  text-decoration: underline;
+  color: #ffffff;
+  transform: scale(1.1);
+}
+
+.night-contact a:focus {
+  text-decoration: underline;
+  color: gainsboro;
+}
+
+.night-contact a:active {
+  text-decoration: underline;
+  color: gainsboro;
+}
+
+.day-contact a:link {
+  text-decoration: none;
+  color: #ff004f;
+  outline: none;
+}
+
+.day-contact a:visited {
+  text-decoration: none;
+  color: #ff004f;
+}
+
+.day-contact a:hover {
+  text-decoration: underline;
+  color: gainsboro;
+  transform: scale(1.1);
+}
+
+.day-contact a:focus {
+  text-decoration: underline;
+  color: silver;
+}
+
+.day-contact a:active {
+  text-decoration: underline;
+  color: silver;
+}
+
