--- a/src/components/mobile/MobileProjects.module.css
+++ b/src/components/mobile/MobileProjects.module.css
@@ -14,10 +14,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 .carousel {
   height: 90vh;
   width: 90vw;
   margin-top: 40vh;
+}
+
+.night-img-div {
+  cursor: pointer;
+  border: 2px solid #ffffff;
+  cursor: pointer;
+}
+
+.day-img-div {
+  cursor: pointer;
+  border: 4px solid #ff004f;
+  cursor: pointer;
 }
