--- a/src/components/mobile/MobileContact.module.css
+++ b/src/components/mobile/MobileContact.module.css
@@ -1,5 +1,6 @@
 .night-contact {
   background: #062f4f;
+  color: #f8f8ff;
   height: 100vh;
   width: 100%;
   text-align: center;
@@ -7,6 +8,7 @@
 
 .day-contact {
   background: #fbfcff;
+  color: #080808;
   height: 100vh;
   width: 100%;
   text-align: center;
@@ -21,17 +23,6 @@
 .night-contact a:visited {
   text-decoration: none;
   color: #ff004f;
-}
-
-.night-contact a:hover {
-  text-decoration: underline;
-  color: #ffffff;
-  transform: scale(1.1);
-}
-
-.night-contact a:focus {
-  text-decoration: underline;
-  color: gainsboro;
 }
 
 .night-contact a:active {
@@ -50,17 +41,6 @@
   color: #ff004f;
 }
 
-.day-contact a:hover {
-  text-decoration: underline;
-  color: gainsboro;
-  transform: scale(1.1);
-}
-
-.day-contact a:focus {
-  text-decoration: underline;
-  color: silver;
-}
-
 .day-contact a:active {
   text-decoration: underline;
   color: silver;
@@ -73,8 +53,7 @@
 
 .contact-text {
   font-size: 1.5em;
-  padding-top: 25vh;
-  margin: 0vh 5vw 0vh 5vw;
+  padding: 30vh 5vw 0vh 5vw;
   font-family: "Oswald", sans-serif;
 }
 
@@ -82,21 +61,5 @@
   font-size: 3em;
   cursor: pointer;
   display: inline-block;
-  margin: 10vh 2vw 0vh 2vw;
-}
-
-.night-contact {
-  background: #062f4f;
-  color: #f8f8ff;
-  height: 100vh;
-  width: 100%;
-  text-align: center;
-}
-
-.day-contact {
-  background: #fbfcff;
-  color: #080808;
-  height: 100vh;
-  width: 100%;
-  text-align: center;
+  padding: 5vh 2vw 0vh 2vw;
 }
