--- a/src/components/mobile/MobileNavBar.module.css
+++ b/src/components/mobile/MobileNavBar.module.css
@@ -1,10 +1,3 @@
-.nav-item:hover,
-.nav-item:active,
-.nav-item:visited,
-.nav-item:focus {
-  text-decoration: underline;
-}
-
 .night-nav-back {
   background: rgba(25, 25, 145, .8);
   width: 100vw;
@@ -106,21 +99,6 @@
   color: #ff004f;
 }
 
-.night-nav-bar a:hover {
-  text-decoration: underline;
-  color: #ffffff;
-}
-
-.night-nav-bar a:focus {
-  text-decoration: underline;
-  color: gainsboro;
-}
-
-.night-nav-bar a:active {
-  text-decoration: underline;
-  color: gainsboro;
-}
-
 .day-nav-bar a:link {
   text-decoration: none;
   color: #ff004f;
@@ -130,21 +108,6 @@
 .day-nav-bar a:visited {
   text-decoration: none;
   color: #ff004f;
-}
-
-.day-nav-bar a:hover {
-  text-decoration: underline;
-  color: gainsboro;
-}
-
-.day-nav-bar a:focus {
-  text-decoration: underline;
-  color: silver;
-}
-
-.day-nav-bar a:active {
-  text-decoration: underline;
-  color: silver;
 }
 
 .night-toggle {
@@ -168,4 +131,40 @@
 .day-toggle:hover {
   text-decoration: none;
   color: #d2c2a9;
+}
+
+.selected {
+  text-decoration: underline !important;
+}
+
+.night-scroll {
+  position: fixed;
+  bottom: 0px;
+  right: 45%;
+  color: #ff004f;
+  font-size: 3em;
+  z-index: 9998;
+}
+
+.night-scroll:active {
+  cursor: pointer;
+  color: gainsboro;
+}
+
+.day-scroll {
+  position: fixed;
+  bottom: 0px;
+  right: 45%;
+  color: #ff004f;
+  font-size: 3em;
+  z-index: 9999;
+}
+
+.day-scroll:active {
+  cursor: pointer;
+  color: silver;
+}
+
+.invisible {
+  opacity: 0;
 }
