--- a/src/components/desktop/NavBar.module.css
+++ b/src/components/desktop/NavBar.module.css
@@ -20,7 +20,7 @@
 .night-nav-bar ul li {
   display: inline;
   box-sizing: border-box;
-  margin: 0 2vw 0 2vw;
+  margin-left: 10vw;
   transition: all 0.2s ease-in-out;
 }
 
@@ -81,7 +81,7 @@
 .day-nav-bar ul li {
   display: inline;
   box-sizing: border-box;
-  margin: 0 2vw 0 2vw;
+  margin-left: 10vw;
   transition: all 0.2s ease-in-out;
 }
 
@@ -124,6 +124,7 @@
   color: #eee8aa;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
+  margin-right: 1vw;
 }
 
 .night-toggle:hover {
@@ -146,6 +147,7 @@
   color: #ffdd42;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
+  margin-right: 1vw;
 }
 
 .day-toggle:hover {
@@ -200,7 +202,7 @@
   right: 50vw;
   color: #ff004f;
   font-size: 3em;
-  z-index: 9999;
+  z-index: 9998;
 }
 
 .day-scroll:hover {
@@ -219,4 +221,63 @@
 }
 .invisible {
   opacity: 0;
+}
+
+.night-nav-image {
+  height: 1.50em;
+  width: 1.125em;
+  position: absolute;
+  left: 2%;
+  top: 1%;
+  filter: invert(100%);
+}
+
+.night-nav-image:hover {
+  cursor: pointer;
+}
+
+.day-nav-image {
+  height: 1.50em;
+  width: 1.125em;
+  position: absolute;
+  left: 2%;
+  top: 1%;
+}
+
+.day-nav-image:hover {
+  cursor: pointer;
+}
+
+.animated img {
+  animation-name: Logo;
+  position: absolute;
+  animation-duration: 10s;
+  animation-iteration-count: 1;
+}
+
+@keyframes Logo {
+  0% {
+    right: 0;
+    transform: translateX(0%)
+  }
+  25% {
+    right: 0;
+    transform: translateX(-1000%)
+  }
+  50% {
+    right: 0;
+    transform: translateX(100%);
+    transform: translateY(40%);
+    height: 100vh;
+    width: 75vh;
+  }
+
+  75% {
+    right: 0;
+    transform: translateX(-500%)
+  }
+  100% {
+    right: 0;
+    transform: translateX(0%)
+  }
 }
