Messed with colors and fonts

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+@import url("https://fonts.googleapis.com/css?family=Rubik");
+
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+
+nav {
+  font-family: "Rubik";
+}
+
+body {
+  font-family: "Roboto";
+}
+
 html {
   scroll-behavior: smooth;
 }
