--- a/src/components/desktop/Contact.module.css
+++ b/src/components/desktop/Contact.module.css
@@ -1,7 +1,7 @@
 .night-email-button {
   user-select: default;
   cursor: pointer;
-  color: #dc143c;
+  color: #d1495b;
 }
 
 .night-email-button:hover {
@@ -17,7 +17,7 @@
 .day-email-button {
   user-select: default;
   cursor: pointer;
-  color: #dc143c;
+  color: #d1495b;
 }
 
 .day-email-button:hover {
@@ -34,8 +34,7 @@
   font-size: 2.5em;
   padding-top: 40vh;
   margin: 0vh 5vw 0vh 5vw;
-  font-family: "Oswald", sans-serif;
-}
+ }
 
 .contact-links {
   font-size: 3em;
@@ -45,15 +44,15 @@
 }
 
 .night-contact {
-  background: #062f4f;
-  color: #f8f8ff;
+  background: #061735;
+  color: #e0e1dd;
   height: 100vh;
   width: 100%;
   text-align: center;
 }
 
 .day-contact {
-  background: #fbfcff;
+  background: #ECECEB;
   color: #080808;
   height: 100vh;
   width: 100%;
@@ -62,13 +61,13 @@
 
 .night-contact a:link {
   text-decoration: none;
-  color: #ff004f;
+  color: #d1495b;
   outline: none;
 }
 
 .night-contact a:visited {
   text-decoration: none;
-  color: #ff004f;
+  color: #d1495b;
 }
 
 .night-contact a:hover {
@@ -89,13 +88,13 @@
 
 .day-contact a:link {
   text-decoration: none;
-  color: #ff004f;
+  color: #d1495b;
   outline: none;
 }
 
 .day-contact a:visited {
   text-decoration: none;
-  color: #ff004f;
+  color: #d1495b;
 }
 
 .day-contact a:hover {
@@ -113,4 +112,3 @@
   text-decoration: underline;
   color: silver;
 }
-
