--- a/src/components/mobile/MobileNavBar.module.css
+++ b/src/components/mobile/MobileNavBar.module.css
@@ -62,7 +62,6 @@
   margin-top: 15vh;
   text-decoration: none;
   list-style-type: none;
-  font-family: "Oswald", sans-serif;
   font-size: 2em;
   z-index: 9999;
 }
@@ -83,31 +82,30 @@
   margin-top: 15vh;
   text-decoration: none;
   list-style-type: none;
-  font-family: "Oswald", sans-serif;
   font-size: 2em;
   z-index: 9999;
 }
 
 .night-nav-bar a:link {
   text-decoration: none;
-  color: #ff004f;
+  color: #d1495b;
   outline: none;
 }
 
 .night-nav-bar a:visited {
   text-decoration: none;
-  color: #ff004f;
+  color: #d1495b;
 }
 
 .day-nav-bar a:link {
   text-decoration: none;
-  color: #ff004f;
+  color: #d1495b;
   outline: none;
 }
 
 .day-nav-bar a:visited {
   text-decoration: none;
-  color: #ff004f;
+  color: #d1495b;
 }
 
 .night-toggle {
@@ -141,7 +139,7 @@
   position: fixed;
   bottom: 0px;
   right: 45%;
-  color: #ff004f;
+  color: #d1495b;
   font-size: 3em;
   z-index: 9998;
 }
@@ -155,7 +153,7 @@
   position: fixed;
   bottom: 0px;
   right: 45%;
-  color: #ff004f;
+  color: #d1495b;
   font-size: 3em;
   z-index: 9999;
 }
