--- a/src/components/desktop/About.module.css
+++ b/src/components/desktop/About.module.css
@@ -72,7 +72,7 @@
   margin: auto;
   font-size: 2.5em;
   text-align: justify;
-  height: 40vh;
+  height: auto;
   width: 50vw;
   margin: 20vh 0vw 0vh 10vw;
   display: flex;
