Cleaned up code a little, fixed mobile responsiveness, optimized images

--- a/src/components/mobile/MobileAbout.module.css
+++ b/src/components/mobile/MobileAbout.module.css
@@ -1,5 +1,5 @@
 .night-about {
-  background: #062f4f;
+  background: #003a6d;
   height: 100vh;
   width: 100%;
   padding-top: 60px;
@@ -7,7 +7,7 @@
 }
 
 .day-about {
-  background: #fbfcff;
+  background: #f9f9f8;
   height: 100vh;
   width: 100%;
   padding-top: 60px;
