--- a/src/components/mobile/MobileContact.module.css
+++ b/src/components/mobile/MobileContact.module.css
@@ -1,13 +1,13 @@
 .night-contact {
-  background: #062f4f;
-  color: #f8f8ff;
+  background: #061735;
+  color: #e0e1dd;
   height: 100vh;
   width: 100%;
   text-align: center;
 }
 
 .day-contact {
-  background: #fbfcff;
+  background: #ececeb;
   color: #080808;
   height: 100vh;
   width: 100%;
@@ -67,7 +67,7 @@
   height: 1.5em;
   width: 1.125em;
   position: absolute;
-  left: 2%;
+  left: 50%;
   bottom: -200vh;
   filter: invert(100%);
 }
@@ -80,7 +80,7 @@
   height: 1.5em;
   width: 1.125em;
   position: absolute;
-  left: 2%;
+  left: 1%;
   bottom: -200vh;
 }
 
