--- a/src/components/mobile/MobileProjects.module.css
+++ b/src/components/mobile/MobileProjects.module.css
@@ -1,5 +1,5 @@
 .night-project-box {
-  background: #0c2340;
+  background: #07264e;
   height: 100vh;
   width: 100%;
   display: flex;
@@ -8,13 +8,12 @@
 }
 
 .day-project-box {
-  background: #ebf0ff;
+  background: #f2f3f2;
   height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 
 .carousel {
