--- a/src/components/mobile/MobileNavBar.module.css
+++ b/src/components/mobile/MobileNavBar.module.css
@@ -29,7 +29,7 @@
   margin-right: 10vw;
   margin-top: 2vh;
   text-align: center;
-  z-index: 9998;
+  z-index: 9999;
   font-size: 2em;
   color: gainsboro;
 }
@@ -41,14 +41,14 @@
   margin-right: 10vw;
   margin-top: 2vh;
   text-align: center;
-  z-index: 9998;
+  z-index: 9999;
   font-size: 2em;
   color: #ffffff;
 }
 
 .night-nav-bar {
   position: fixed;
-  z-index: 9998;
+  z-index: 9999;
   top: 0;
   left: 5vw;
   right: 0;
@@ -63,12 +63,12 @@
   text-decoration: none;
   list-style-type: none;
   font-size: 2em;
-  z-index: 9998;
+  z-index: 9999;
 }
 
 .day-nav-bar {
   position: fixed;
-  z-index: 9998;
+  z-index: 9999;
   top: 0;
   left: 5vw;
   right: 0;
@@ -83,7 +83,7 @@
   text-decoration: none;
   list-style-type: none;
   font-size: 2em;
-  z-index: 9998;
+  z-index: 9999;
 }
 
 .night-nav-bar a:link {
@@ -141,7 +141,7 @@
   right: 45%;
   color: #d1495b;
   font-size: 3em;
-  z-index: 9998;
+  z-index: 9999;
 }
 
 .night-scroll:active {
@@ -155,7 +155,7 @@
   right: 43%;
   color: #d1495b;
   font-size: 3em;
-  z-index: 9998;
+  z-index: 9999;
 }
 
 .day-scroll:active {
@@ -165,4 +165,64 @@
 
 .invisible {
   opacity: 0;
+}
+
+.night-zara-image {
+  height: 3em;
+  width: 2.25em;
+  position: fixed;
+  left: 2%;
+  top: 1%;
+  filter: invert(100%);
+  z-index: 9999;
+}
+
+.night-zara-image:hover {
+  cursor: pointer;
+}
+
+.day-zara-image {
+  height: 3em;
+  width: 2.25em;
+  position: fixed;
+  left: 2%;
+  top: 1%;
+  z-index: 9999;
+}
+
+.day-zara-image:hover {
+  cursor: pointer;
+}
+
+.animated img {
+  position: fixed;
+  animation: Logo 10s 1;
+  z-index: 9999;
+}
+
+@keyframes Logo {
+  0% {
+    right: 0;
+    transform: translateX(0%);
+  }
+  25% {
+    right: 0;
+    transform: translateX(-500%);
+  }
+  50% {
+    right: 0;
+    transform: translateX(50%);
+    transform: translateY(50%);
+    height: 75vh;
+    width: 50vh;
+  }
+
+  75% {
+    right: 0;
+    transform: translateX(-500%);
+  }
+  100% {
+    right: 0;
+    transform: translateX(0%);
+  }
 }
