--- a/src/components/desktop/About.module.css
+++ b/src/components/desktop/About.module.css
@@ -1,19 +1,21 @@
 .night-about {
-  background: #003a6d;
-  color: #e0e1dd;
+  background: #141852;
+  color: #ffffff;
   height: 100vh;
   width: 100%;
   padding-top: 200px;
   margin-top: -200px;
+  transition: 0.8s;
 }
 
 .day-about {
-  background: #f9f9f8;
+  background: #ECECEB;
   color: #080808;
   height: 100vh;
   width: 100%;
   padding-top: 200px;
   margin-top: -200px;
+  transition: 0.8s;
 }
 
 .night-about a:link {
@@ -91,40 +93,31 @@
   align-content: center;
   flex-direction: column;
   float: right;
+  transition: 0.8s;
 }
 
 .night-image {
   margin: auto;
   height: 30vh;
   width: 40vh;
-  border: 2px solid #ffffff;
+  box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.5);
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .night-image:hover {
-  cursor: pointer;
-  border: 2px solid gainsboro;
-}
-
-.night-image:focus {
-  cursor: pointer;
-  border: 2px solid silver;
+  box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.7);
 }
 
 .day-image {
   margin: auto;
   height: 30vh;
   width: 40vh;
-  border: 3px solid #dc143c;
+  box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.5);
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .day-image:hover {
-  cursor: pointer;
-  border: 4px solid gainsboro;
-}
-
-.day-image:focus {
-  cursor: pointer;
-  border: 4px solid silver;
+  box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.7);
 }
