--- a/src/components/desktop/Contact.module.css
+++ b/src/components/desktop/Contact.module.css
@@ -34,7 +34,7 @@
   font-size: 2.5em;
   padding-top: 40vh;
   margin: 0vh 5vw 0vh 5vw;
- }
+}
 
 .contact-links {
   font-size: 3em;
@@ -44,25 +44,29 @@
 }
 
 .night-contact {
-  background: #061735;
+  background: #141852;
   color: #e0e1dd;
   height: 100vh;
   width: 100%;
   text-align: center;
+  transition: 0.8s;
+  scroll-margin-top: -8vh;
 }
 
 .day-contact {
-  background: #ECECEB;
+  background: #ececeb;
   color: #080808;
   height: 100vh;
   width: 100%;
   text-align: center;
+  transition: 0.8s;
 }
 
 .night-contact a:link {
   text-decoration: none;
   color: #d1495b;
   outline: none;
+  filter: drop-shadow(1px 1px 1px #d1495b);
 }
 
 .night-contact a:visited {
@@ -90,6 +94,7 @@
   text-decoration: none;
   color: #d1495b;
   outline: none;
+  filter: drop-shadow(1px 1px 1px #d1495b);
 }
 
 .day-contact a:visited {
