--- a/src/components/desktop/NavBar.module.css
+++ b/src/components/desktop/NavBar.module.css
@@ -1,14 +1,15 @@
 .night-nav-bar {
-  background: #000022;
+  background: #050827;
   position: sticky;
   top: 0;
   z-index: 9999;
-  line-height: 10vh;
-  height: 10vh;
+  line-height: 8vh;
+  height: 8vh;
   width: 100%;
   text-align: center;
-  font-size: 3em;
-    border-bottom: 2px solid #ffffff;
+  font-size: 2.5em;
+  box-shadow: 0 5px 4px -1px rgba(0, 0, 0, 0.25);
+  transition: 0.8s;
 }
 
 .night-nav-bar ul {
@@ -63,12 +64,13 @@
   position: sticky;
   top: 0;
   z-index: 9999;
-  line-height: 10vh;
-  height: 10vh;
+  line-height: 8vh;
+  height: 8vh;
   width: 100%;
   text-align: center;
-  font-size: 3em;
-    border-bottom: 3px solid #d1495b;
+  font-size: 2.5em;
+  box-shadow: 0 5px 4px -1px rgba(0, 0, 0, 0.25);
+  transition: 0.8s;
 }
 
 .day-nav-bar ul {
@@ -226,8 +228,9 @@
   width: 1.125em;
   position: fixed;
   left: 1%;
-  top: 1%;
+  top: 0.5%;
   filter: invert(100%);
+  transition: 0.8s;
 }
 
 .night-zara-image:hover {
@@ -239,7 +242,8 @@
   width: 1.125em;
   position: fixed;
   left: 1%;
-  top: 1%;
+  top: 0.5%;
+  transition: 0.8s;
 }
 
 .day-zara-image:hover {
