--- a/src/components/mobile/MobileAbout.module.css
+++ b/src/components/mobile/MobileAbout.module.css
@@ -72,8 +72,8 @@
   margin: 5vh auto 5vh auto;
   height: 30vh;
   width: 40vh;
-  border: 2px solid #ffffff;
   border-radius: 50%;
+  box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
 .day-image {
@@ -82,8 +82,8 @@
   margin: 5vh auto 5vh auto;
   height: 30vh;
   width: 40vh;
-  border: 2px solid #d1495b;
   border-radius: 50%;
+  box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
 .night-about-text {
