--- a/src/components/mobile/MobileProjects.module.css
+++ b/src/components/mobile/MobileProjects.module.css
@@ -24,12 +24,12 @@
 
 .night-img-div {
   cursor: pointer;
-  border: 2px solid #ffffff;
+ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   cursor: pointer;
 }
 
 .day-img-div {
   cursor: pointer;
-  border: 4px solid #d1495b;
+ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   cursor: pointer;
 }
