--- a/src/components/desktop/About.module.css
+++ b/src/components/desktop/About.module.css
@@ -1,21 +1,27 @@
 .night-about {
-  background: #141852;
+  background: #343a40;
   color: #ffffff;
   height: 100vh;
   width: 100%;
-  padding-top: 200px;
-  margin-top: -200px;
   transition: 0.8s;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10vw;
+  padding: 200px;
+  margin: -200px;
 }
 
 .day-about {
-  background: #ECECEB;
+  background: #ececeb;
   color: #080808;
   height: 100vh;
   width: 100%;
-  padding-top: 200px;
-  margin-top: -200px;
   transition: 0.8s;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10vw;
+  padding: 200px;
+  margin: -200px;
 }
 
 .night-about a:link {
@@ -72,29 +78,22 @@
 
 .about-text {
   margin: auto;
-  font-size: 2.5em;
+  font-size: 2rem;
   text-align: justify;
-  height: auto;
   width: 50vw;
-  margin: 20vh 0vw 0vh 10vw;
+  height: 50vh;
+  margin: 15vh 0vw 0vh 5vw;
   display: flex;
-  justify-content: center;
-  align-content: center;
-  flex-direction: column;
-  float: left;
+  align-items: center;
 }
 
 .about-img {
-  height: 40vh;
   width: 20vw;
-  margin: 18vh 10vw 0vh 0vw;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  flex-direction: column;
-  float: right;
+  height: 50vh;
+  margin: 12vh 0vw 0vh 0vw;
   transition: 0.8s;
-  
+  display: flex;
+  align-items: center;
 }
 
 .night-image {
