--- a/src/components/desktop/Projects.module.css
+++ b/src/components/desktop/Projects.module.css
@@ -1,6 +1,5 @@
 .night-project-box {
-  background: #2b2f77;
-  color: #ffffff;
+  background: #495057;
   height: 300vh;
   width: auto;
   display: grid;
@@ -41,6 +40,7 @@
 
 .night-img-div h1 {
   margin: 2vh;
+  color: #ffffff;
 }
 
 .night-text-div a:link {
