--- a/src/components/mobile/MobileAbout.module.css
+++ b/src/components/mobile/MobileAbout.module.css
@@ -1,17 +1,20 @@
 .night-about {
-  background: #141852;
+  background: #343a40;
   height: 100vh;
   width: 100%;
   padding-top: 60px;
   margin-top: -60px;
+  transition: 0.8s;
 }
 
 .day-about {
   background: #ECECEB;
+  color: #080808;
   height: 100vh;
   width: 100%;
   padding-top: 60px;
   margin-top: -60px;
+  transition: 0.8s;
 }
 
 .night-about a:link {
@@ -74,6 +77,7 @@
   width: 40vh;
   border-radius: 50%;
   box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.5);
+  transition: 0.8s;
 }
 
 .day-image {
@@ -84,6 +88,7 @@
   width: 40vh;
   border-radius: 50%;
   box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.5);
+  transition: 0.8s;
 }
 
 .night-about-text {
