--- a/src/components/mobile/MobileProjects.module.css
+++ b/src/components/mobile/MobileProjects.module.css
@@ -1,10 +1,11 @@
 .night-project-box {
-  background: #2b2f77;
+  background: #495057;
   height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 0.8s;
 }
 
 .day-project-box {
@@ -14,6 +15,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 0.8s;
 }
 
 .carousel {
@@ -24,12 +26,12 @@
 
 .night-img-div {
   cursor: pointer;
- box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   cursor: pointer;
 }
 
 .day-img-div {
   cursor: pointer;
- box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   cursor: pointer;
 }
