--- a/src/components/desktop/NavBar.module.css
+++ b/src/components/desktop/NavBar.module.css
@@ -226,46 +226,44 @@
 .night-zara-image {
   height: 1.5em;
   width: 1.125em;
-  position: fixed;
+  filter: invert(100%);
   left: 1%;
   top: 0.5%;
-  filter: invert(100%);
   transition: 0.8s;
-}
-
-.night-zara-image:hover {
   cursor: pointer;
+  position: absolute;
 }
 
 .day-zara-image {
   height: 1.5em;
   width: 1.125em;
-  position: fixed;
+  position: absolute;
   left: 1%;
   top: 0.5%;
   transition: 0.8s;
-}
-
-.day-zara-image:hover {
   cursor: pointer;
+  position: absolute;
 }
 
 .animated img {
-  position: fixed;
   animation: Logo 10s 1;
 }
 
 @keyframes Logo {
   0% {
-    right: 0;
     transform: translateX(0%);
   }
   25% {
-    right: 0;
     transform: translateX(-1000%);
   }
   50% {
-    right: 0;
+    transform: translateX(100%);
+    transform: translateY(40%);
+    height: 100vh;
+    width: 75vh;
+  }
+
+  52% {
     transform: translateX(100%);
     transform: translateY(40%);
     height: 100vh;
@@ -273,11 +271,9 @@
   }
 
   75% {
-    right: 0;
     transform: translateX(-500%);
   }
   100% {
-    right: 0;
     transform: translateX(0%);
   }
 }
